log
Mon 06 May 2024 08:51:51 PM UTC: 
 treemap.c | 16 ++++++++++++----
 1 file changed, 12 insertions(+), 4 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:65:9: error: expected expression before ‘)’ token
   65 |     if ()
      |         ^
Compilation failed
a3acd16
Mon 06 May 2024 08:51:58 PM UTC: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  4|7
total_score: 5/70
6816224
Mon 06 May 2024 08:53:42 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
3702328
Mon 06 May 2024 08:57:16 PM UTC: 
 treemap.c | 22 +++++++++++++++++++++-
 1 file changed, 21 insertions(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
bccdc9d
Mon 06 May 2024 09:05:10 PM UTC: 
 treemap.c | 31 ++++++++++++++++++++++++++++++-
 1 file changed, 30 insertions(+), 1 deletion(-)
 tests:  0|0
ca33f99
Mon 06 May 2024 09:05:22 PM UTC: 
 treemap.c | 4 ----
 1 file changed, 4 deletions(-)
 tests:  0|0
9d9e8f7
Mon 06 May 2024 09:06:25 PM UTC: 
 treemap.c | 23 +----------------------
 1 file changed, 1 insertion(+), 22 deletions(-)
 tests:  12|6
total_score: 20/70
f2bd3f9
Mon 06 May 2024 09:10:28 PM UTC: 
 treemap.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
 tests:  12|6
total_score: 20/70
b8be8cc
Mon 06 May 2024 09:15:08 PM UTC: 
 treemap.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  0|0
da7f0e9
Mon 06 May 2024 09:15:18 PM UTC: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
787cbc7
Mon 06 May 2024 09:23:10 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
0169f1c
Wed 08 May 2024 01:19:45 AM UTC: 
 treemap.c | 55 ++++++++++++++++++++++++++++++++++++++++++++++++++-----
 1 file changed, 50 insertions(+), 5 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:125:23: error: unused variable ‘min’ [-Werror=unused-variable]
  125 |             TreeNode *min = minimum(node->right);
      |                       ^~~
cc1: all warnings being treated as errors
Compilation failed
ad494ea
Wed 08 May 2024 01:19:59 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|6
total_score: 25/70
4eac477
Wed 08 May 2024 01:22:04 AM UTC: 
 treemap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  15|5
total_score: 25/70
417732f
Wed 08 May 2024 01:27:19 AM UTC: 
 treemap.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  17|4
total_score: 30/70
b5657d7
Wed 08 May 2024 01:30:04 AM UTC: 
 treemap.c | 22 +++++++++++++++++++++-
 1 file changed, 21 insertions(+), 1 deletion(-)
 tests:  19|4
total_score: 35/70
950c2dc
Wed 08 May 2024 01:30:48 AM UTC: 
 treemap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  22|3
total_score: 45/70
fa25872
Wed 08 May 2024 01:36:31 AM UTC: 
 treemap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  22|3
total_score: 45/70
c508cc1
Wed 08 May 2024 01:45:38 AM UTC: 
 treemap.c | 11 +----------
 1 file changed, 1 insertion(+), 10 deletions(-)
 tests:  19|4
total_score: 35/70
4c2c9a2
Wed 08 May 2024 01:48:55 AM UTC: 
 treemap.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  0|0
0a8a97d
Wed 08 May 2024 01:49:38 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  19|4
total_score: 35/70
45a793c
Wed 08 May 2024 03:43:45 PM UTC: 
 treemap.c | 12 +++++++-----
 1 file changed, 7 insertions(+), 5 deletions(-)
 tests:  19|4
total_score: 35/70
228dcc6
Wed 08 May 2024 03:44:17 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
treemap.c: In function ‘nextTreeMap’:
treemap.c:217:19: error: ‘TreeNode’ has no member named ‘current’
  217 |         return aux->current;
      |                   ^~
Compilation failed
329cec1
Wed 08 May 2024 03:44:24 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  19|4
total_score: 35/70
e3d8053
Wed 08 May 2024 03:48:26 PM UTC: 
 treemap.c | 9 +++------
 1 file changed, 3 insertions(+), 6 deletions(-)
 tests:  0|0
96e0816
Wed 08 May 2024 03:49:00 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
000617b
Wed 08 May 2024 03:54:09 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  19|4
total_score: 35/70
1704e1c
Wed 08 May 2024 03:54:35 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
49cad25
Wed 08 May 2024 03:55:26 PM UTC: 
 treemap.c | 10 ++++++----
 1 file changed, 6 insertions(+), 4 deletions(-)
 tests:  19|4
total_score: 35/70
32dc115
Wed 08 May 2024 03:56:40 PM UTC: 
 treemap.c | 12 +++++++-----
 1 file changed, 7 insertions(+), 5 deletions(-)
 tests:  22|3
total_score: 45/70
cf4abc2
Wed 08 May 2024 03:57:50 PM UTC: 
 treemap.c | 12 ++++--------
 1 file changed, 4 insertions(+), 8 deletions(-)
 tests:  0|0
10ecf62
Wed 08 May 2024 04:01:24 PM UTC: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘nextTreeMap’:
treemap.c:211:19: error: unused variable ‘padre’ [-Werror=unused-variable]
  211 |         TreeNode *padre = aux->parent;
      |                   ^~~~~
cc1: all warnings being treated as errors
Compilation failed
4098c72
Wed 08 May 2024 04:01:36 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
ae2b2af
Wed 08 May 2024 04:02:25 PM UTC: 
 treemap.c | 11 ++++++-----
 1 file changed, 6 insertions(+), 5 deletions(-)
 tests:  22|3
total_score: 45/70
1bb34b6
Wed 08 May 2024 06:50:40 PM UTC: 
 treemap.c | 27 ++++++++++++++++++++++++++-
 1 file changed, 26 insertions(+), 1 deletion(-)
 tests:  22|3
total_score: 45/70
89a87bb
Sat 11 May 2024 08:17:04 PM UTC: 
 treemap.c | 76 +++++++++++++++++++--------------------------------------------
 1 file changed, 23 insertions(+), 53 deletions(-)
 tests:  0|0
fdd1f64
Sat 11 May 2024 08:20:42 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
0d57eb6
Sat 11 May 2024 08:21:02 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
1e7cb82
Sat 11 May 2024 08:22:22 PM UTC: 
 treemap.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
 tests:  0|0
cc7a880
Sat 11 May 2024 08:24:08 PM UTC: 
 treemap.c | 7 +------
 1 file changed, 1 insertion(+), 6 deletions(-)
 tests:  0|0
f8be91e
Sat 11 May 2024 08:24:45 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  22|3
total_score: 45/70
9e508bf
Sat 11 May 2024 08:25:45 PM UTC: 
 treemap.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  23|3
total_score: 45/70
efe0212
Sat 11 May 2024 08:27:23 PM UTC: 
 treemap.c | 9 ++++-----
 1 file changed, 4 insertions(+), 5 deletions(-)
 tests:  22|3
total_score: 45/70
264a804
Sat 11 May 2024 08:28:17 PM UTC: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  22|3
total_score: 45/70
83654d0
Sat 11 May 2024 08:34:05 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
380f82c
Sat 11 May 2024 08:34:19 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
169d9a3
Sat 11 May 2024 08:34:56 PM UTC: 
 treemap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  22|3
total_score: 45/70
08135b1
Sat 11 May 2024 08:37:30 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  24|2
total_score: 55/70
823fd3e
Sat 11 May 2024 10:12:01 PM UTC: 
 treemap.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  25|1
total_score: 60/70
fe5cb47
Sat 11 May 2024 11:50:10 PM UTC: 
 treemap.c | 25 +++++++++++++++++++++++--
 1 file changed, 23 insertions(+), 2 deletions(-)
 tests:  25|1
total_score: 60/70
2ab5a94
Sat 11 May 2024 11:50:54 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
8c632cd
Sat 11 May 2024 11:51:21 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  25|1
total_score: 60/70
bab0de2
